--- a/src/components/FriendListItem/FriendListItem.module.css
+++ b/src/components/FriendListItem/FriendListItem.module.css
@@ -11,15 +11,27 @@
 
 .status::before {
   content: '__';
-  color: red;
-  background-color: red;
-  border-color: red;
+  color: green;
+  background-color: green;
+  border-color: green;
   border-style: solid;
   border-radius: 100px;
   width: 50px;
   height: 50px;
   display: block;
 }
+
+.status_red::before {
+  content: '__';
+  color: red;
+  background-color: red;
+  border-color: red;
+  border-radius: 100px;
+  width: 65px;
+  height: 65px;
+  display: block;
+}
+
 .avatar {
   display: block;
   width: 100px;
